parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expresion
Rule 1     expresion -> expresion MAS termino
Rule 2     expresion -> expresion MENOS termino
Rule 3     expresion -> expresion POTENCIA termino
Rule 4     expresion -> termino
Rule 5     termino -> termino POR factor
Rule 6     termino -> termino DIVIDIDO factor
Rule 7     termino -> factor
Rule 8     factor -> NUMERO
Rule 9     factor -> PARENTESIS_IZQ expresion PARENTESIS_DER
Rule 10    factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

Terminals, with rules where they appear

DIVIDIDO             : 6
LOGARITMO            : 10
MAS                  : 1
MENOS                : 2
NUMERO               : 8
PARENTESIS_DER       : 9 10
PARENTESIS_IZQ       : 9 10
POR                  : 5
POTENCIA             : 3
error                : 

Nonterminals, with rules where they appear

expresion            : 1 2 3 9 10 0
factor               : 5 6 7
termino              : 1 2 3 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . expresion
    (1) expresion -> . expresion MAS termino
    (2) expresion -> . expresion MENOS termino
    (3) expresion -> . expresion POTENCIA termino
    (4) expresion -> . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    expresion                      shift and go to state 1
    termino                        shift and go to state 2
    factor                         shift and go to state 3

state 1

    (0) S' -> expresion .
    (1) expresion -> expresion . MAS termino
    (2) expresion -> expresion . MENOS termino
    (3) expresion -> expresion . POTENCIA termino

    MAS             shift and go to state 7
    MENOS           shift and go to state 8
    POTENCIA        shift and go to state 9


state 2

    (4) expresion -> termino .
    (5) termino -> termino . POR factor
    (6) termino -> termino . DIVIDIDO factor

    MAS             reduce using rule 4 (expresion -> termino .)
    MENOS           reduce using rule 4 (expresion -> termino .)
    POTENCIA        reduce using rule 4 (expresion -> termino .)
    $end            reduce using rule 4 (expresion -> termino .)
    PARENTESIS_DER  reduce using rule 4 (expresion -> termino .)
    POR             shift and go to state 10
    DIVIDIDO        shift and go to state 11


state 3

    (7) termino -> factor .

    POR             reduce using rule 7 (termino -> factor .)
    DIVIDIDO        reduce using rule 7 (termino -> factor .)
    MAS             reduce using rule 7 (termino -> factor .)
    MENOS           reduce using rule 7 (termino -> factor .)
    POTENCIA        reduce using rule 7 (termino -> factor .)
    $end            reduce using rule 7 (termino -> factor .)
    PARENTESIS_DER  reduce using rule 7 (termino -> factor .)


state 4

    (8) factor -> NUMERO .

    POR             reduce using rule 8 (factor -> NUMERO .)
    DIVIDIDO        reduce using rule 8 (factor -> NUMERO .)
    MAS             reduce using rule 8 (factor -> NUMERO .)
    MENOS           reduce using rule 8 (factor -> NUMERO .)
    POTENCIA        reduce using rule 8 (factor -> NUMERO .)
    $end            reduce using rule 8 (factor -> NUMERO .)
    PARENTESIS_DER  reduce using rule 8 (factor -> NUMERO .)


state 5

    (9) factor -> PARENTESIS_IZQ . expresion PARENTESIS_DER
    (1) expresion -> . expresion MAS termino
    (2) expresion -> . expresion MENOS termino
    (3) expresion -> . expresion POTENCIA termino
    (4) expresion -> . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    expresion                      shift and go to state 12
    termino                        shift and go to state 2
    factor                         shift and go to state 3

state 6

    (10) factor -> LOGARITMO . PARENTESIS_IZQ expresion PARENTESIS_DER

    PARENTESIS_IZQ  shift and go to state 13


state 7

    (1) expresion -> expresion MAS . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    termino                        shift and go to state 14
    factor                         shift and go to state 3

state 8

    (2) expresion -> expresion MENOS . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    termino                        shift and go to state 15
    factor                         shift and go to state 3

state 9

    (3) expresion -> expresion POTENCIA . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    termino                        shift and go to state 16
    factor                         shift and go to state 3

state 10

    (5) termino -> termino POR . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    factor                         shift and go to state 17

state 11

    (6) termino -> termino DIVIDIDO . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    factor                         shift and go to state 18

state 12

    (9) factor -> PARENTESIS_IZQ expresion . PARENTESIS_DER
    (1) expresion -> expresion . MAS termino
    (2) expresion -> expresion . MENOS termino
    (3) expresion -> expresion . POTENCIA termino

    PARENTESIS_DER  shift and go to state 19
    MAS             shift and go to state 7
    MENOS           shift and go to state 8
    POTENCIA        shift and go to state 9


state 13

    (10) factor -> LOGARITMO PARENTESIS_IZQ . expresion PARENTESIS_DER
    (1) expresion -> . expresion MAS termino
    (2) expresion -> . expresion MENOS termino
    (3) expresion -> . expresion POTENCIA termino
    (4) expresion -> . termino
    (5) termino -> . termino POR factor
    (6) termino -> . termino DIVIDIDO factor
    (7) termino -> . factor
    (8) factor -> . NUMERO
    (9) factor -> . PARENTESIS_IZQ expresion PARENTESIS_DER
    (10) factor -> . LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER

    NUMERO          shift and go to state 4
    PARENTESIS_IZQ  shift and go to state 5
    LOGARITMO       shift and go to state 6

    expresion                      shift and go to state 20
    termino                        shift and go to state 2
    factor                         shift and go to state 3

state 14

    (1) expresion -> expresion MAS termino .
    (5) termino -> termino . POR factor
    (6) termino -> termino . DIVIDIDO factor

    MAS             reduce using rule 1 (expresion -> expresion MAS termino .)
    MENOS           reduce using rule 1 (expresion -> expresion MAS termino .)
    POTENCIA        reduce using rule 1 (expresion -> expresion MAS termino .)
    $end            reduce using rule 1 (expresion -> expresion MAS termino .)
    PARENTESIS_DER  reduce using rule 1 (expresion -> expresion MAS termino .)
    POR             shift and go to state 10
    DIVIDIDO        shift and go to state 11


state 15

    (2) expresion -> expresion MENOS termino .
    (5) termino -> termino . POR factor
    (6) termino -> termino . DIVIDIDO factor

    MAS             reduce using rule 2 (expresion -> expresion MENOS termino .)
    MENOS           reduce using rule 2 (expresion -> expresion MENOS termino .)
    POTENCIA        reduce using rule 2 (expresion -> expresion MENOS termino .)
    $end            reduce using rule 2 (expresion -> expresion MENOS termino .)
    PARENTESIS_DER  reduce using rule 2 (expresion -> expresion MENOS termino .)
    POR             shift and go to state 10
    DIVIDIDO        shift and go to state 11


state 16

    (3) expresion -> expresion POTENCIA termino .
    (5) termino -> termino . POR factor
    (6) termino -> termino . DIVIDIDO factor

    MAS             reduce using rule 3 (expresion -> expresion POTENCIA termino .)
    MENOS           reduce using rule 3 (expresion -> expresion POTENCIA termino .)
    POTENCIA        reduce using rule 3 (expresion -> expresion POTENCIA termino .)
    $end            reduce using rule 3 (expresion -> expresion POTENCIA termino .)
    PARENTESIS_DER  reduce using rule 3 (expresion -> expresion POTENCIA termino .)
    POR             shift and go to state 10
    DIVIDIDO        shift and go to state 11


state 17

    (5) termino -> termino POR factor .

    POR             reduce using rule 5 (termino -> termino POR factor .)
    DIVIDIDO        reduce using rule 5 (termino -> termino POR factor .)
    MAS             reduce using rule 5 (termino -> termino POR factor .)
    MENOS           reduce using rule 5 (termino -> termino POR factor .)
    POTENCIA        reduce using rule 5 (termino -> termino POR factor .)
    $end            reduce using rule 5 (termino -> termino POR factor .)
    PARENTESIS_DER  reduce using rule 5 (termino -> termino POR factor .)


state 18

    (6) termino -> termino DIVIDIDO factor .

    POR             reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    DIVIDIDO        reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    MAS             reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    MENOS           reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    POTENCIA        reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    $end            reduce using rule 6 (termino -> termino DIVIDIDO factor .)
    PARENTESIS_DER  reduce using rule 6 (termino -> termino DIVIDIDO factor .)


state 19

    (9) factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .

    POR             reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    DIVIDIDO        reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MAS             reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MENOS           reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    POTENCIA        reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    $end            reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)
    PARENTESIS_DER  reduce using rule 9 (factor -> PARENTESIS_IZQ expresion PARENTESIS_DER .)


state 20

    (10) factor -> LOGARITMO PARENTESIS_IZQ expresion . PARENTESIS_DER
    (1) expresion -> expresion . MAS termino
    (2) expresion -> expresion . MENOS termino
    (3) expresion -> expresion . POTENCIA termino

    PARENTESIS_DER  shift and go to state 21
    MAS             shift and go to state 7
    MENOS           shift and go to state 8
    POTENCIA        shift and go to state 9


state 21

    (10) factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .

    POR             reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    DIVIDIDO        reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MAS             reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    MENOS           reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    POTENCIA        reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    $end            reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)
    PARENTESIS_DER  reduce using rule 10 (factor -> LOGARITMO PARENTESIS_IZQ expresion PARENTESIS_DER .)

